// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timer /> snapshots renders with all props 1`] = `
<div
  className="mfui-timer"
  data-testid="root"
>
  <span>
    Действительно до
     
  </span>
  <span>
    33 мин
  </span>
</div>
`;

exports[`<Timer /> snapshots renders with require props 1`] = `
<div
  className="mfui-timer"
>
  <span>
    25 апреля 2022
  </span>
</div>
`;
